feat: streamlit app is bounded
